# Capstone-Vehicle-Sim-Project-Team3

./: .gitignore  README.md
src/: Cargo.toml
src/assets/models/vehicle/tire/: tire.glb
src/cameras/: Cargo.toml
src/cameras/src/: camera_az_el.rs
src/car/: Cargo.toml
src/car/examples/: car.rs
src/car/src/: build.rs  control.rs  environment.rs  physics.rs  setup.rs
src/grid_terrain/: Cargo.toml
src/grid_terrain/src/: examples.rs  lib.rs  perlin.rs  plane.rs
src/integrator/src/: integrator.rs  lib.rs
src/plane/: Cargo.toml
src/plane/src/: main.rs
src/rigid_body/: Cargo.toml
src/rigid_body/src/: algorithms.rs  joint.rs  plugin.rs
