[workspace]
members = [
    "rigid_body", 
    "integrator",
    "car", 
    "grid_terrain",
    "cameras",
    ]
resolver = "2"

[workspace.dependencies]
# bevy
bevy = {version = "0.12", features = ["jpeg", "bevy_gltf"]} 
bevy_obj = "0.12.0"



car = { path = "./car" }
data_viewer = { path = "./data_viewer" }
rigid_body = {path = "./rigid_body"}
bevy_integrator = { path = "./integrator" }
cameras = {  path = "./cameras" }

# physics
grid_terrain = { path = "./grid_terrain" }

# other
rand = "0.8.4"

itertools = "0.12.1"
nalgebra = "0.32.2"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
