[package]
name = "plane"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {workspace = true}
noise = { version = "0.8.2", features = ["images"] }
image = "0.23.14"
rand = "0.8"

[[example]]
name = "plane"
path = "./src/main.rs"